# QT-Gstreamer-application

./: CMakeLists.txt  README.md  build.sh  main.qml  requirements.txt
include/: Gstreamer_camera_capture.hpp  Gui_application.hpp  Gui_stream_object.hpp
src/: CMakeLists.txt  Gstreamer_camera_capture.cpp  Gui_application.cpp  Gui_stream_object.cpp  main.cpp  main.qml
